[project]
name = "binance-trading-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-binance>=1.0.37",
    "python-dotenv>=1.2.2",
    "questionary>=2.1.1",
    "rich>=15.0.0",
]
[project.scripts]
trading_bot = "trading_bot.main:main"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.20",
]


[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true

mypy_path = "src"
explicit_package_bases = true


[[tool.mypy.overrides]]
module = ["pytest.*","binance.*"]

ignore_missing_imports = true


[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    
    "W",   
    "F",   
    "I",    
    "UP",  
    "B",   
    "SIM",  
    "N",    
    "ASYNC",
    "PTH",  
]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_bot"]
